# hospital-system

./: .gitignore
backend/: .env  Cargo.toml  diesel.toml  docker-compose.yml
backend/migrations/2024-11-02-195936_setup_db/: down.sql  up.sql
backend/src/: config.rs  custom_validations.rs  error_archive.rs  field_validations.rs  main.rs  run.sh  schema.rs
backend/src/auth/: auth.rs  index.json  middleware.rs  mod.rs
backend/src/controllers/: bed.rs  bed_controller.rs  medication.rs  mod.rs  patient.rs  patient_controller.rs  patients.rs  prescription.rs  user.rs  user_controller.rs  users.rs
backend/src/db/: connection.rs  mod.rs
backend/src/extractors/: bearer_token.rs  mod.rs
backend/src/handlers/: auth.rs  beds.rs  medications.rs  mod.rs  patients.rs  prescriptions.rs  uploads.rs  users.rs
backend/src/impls/: mod.rs  serde_impls.rs
backend/src/models/: _.rs  administered_medication.rs  bed.rs  bed_allocation.rs  doctor_consultation.rs  invoice.rs  medication.rs  mod.rs  other  patient.rs  prescription.rs  procedure.rs  triage_record.rs  user.rs  visit.rs
backend/src/validations/: _common.rs  mod.rs  patient.rs  user.rs
backend/src/validator/: custom_validations.rs  mod.rs
backend/tests/: database_test.rs  test_database_connection.rs
backend/tests/common/: mod.rs
backend/uploads/: index.txt
frontend/: index.html  package-lock.json  package.json  todo.txt
frontend/src/: App.jsx
frontend/src/components/: FullPageLoader.jsx  RenderIndexPage.jsx  Sidebar.jsx  Topbar.jsx
frontend/src/hooks/: useFetch.jsx  useLocalStorage.jsx  useNumberFormatter.jsx
frontend/src/middleware/: AuthMiddleware.jsx  ErrorBoundary.jsx  LoggingMiddleware.jsx
frontend/src/pages/: Home.jsx  Signin.jsx  Tables.jsx
frontend/src/styles/: full_page_loader.css
frontend/src/utils/: currencyFormatter.jsx  dateFormatter.jsx
(+18 files in other folders)
