[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.9.0"
bigdecimal = "0.4.6"
chrono = { version = "0.4.38", features = ["serde"] }
diesel = { version = "2.2.4", features = ["chrono", "postgres", "r2d2"] }
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
dotenvy = "0.15.7"
r2d2 = "0.8.10"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
thiserror = "1.0.63"
tokio = { version = "1.41.0", features = ["full"] }
tracing = "0.1.40"
tracing-actix-web = "0.7.14"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
