[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-files = "0.6.6"
actix-multipart = "0.7.2"
actix-web = "4.9.0"
actix-web-lab = "0.23.0"
argon2 = "0.5.3"
async-trait = "0.1.83"
awc = "3.5.1"
bigdecimal = "0.4.6"
chrono = { version = "0.4.38", features = ["serde"] }
derive_more = "1.0.0"
diesel = { version = "2.2.5", features = ["chrono", "numeric", "postgres", "r2d2", "uuid"] }
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
dotenvy = "0.15.7"
futures = "0.3.31"
futures-util = "0.3.31"
jsonwebtoken = "9.3.0"
phonelib = "0.1.2"
r2d2 = "0.8.10"
regex = "1.11.1"
self_update = "0.41.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
thiserror = "2.0.3"
tokio = { version = "1.41.1", features = ["full"] }
tokio-stream = "0.1.17"
tracing = "0.1.41"
tracing-actix-web = "0.7.14"
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = "1.12.1"
validator = { version = "0.19.0", features = ["derive"] }
